data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_480.wast
;; Sure, here are ten test descriptions for evaluating differential behavior in handling `br` instruction for potential infinite loops:  1. A single `loop` with a `br` instruction targeting an outer block, ensuring that the branch correctly exits the loop and does not re-enter it. This tests correct label indexing and context (C) management, avoiding infinite looping.

(assert_invalid
  (module
    (func $test
      (loop (block (br 1)))
    )
  )
  "unknown label"
)